# spec-kit

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
.claude/commands/: speckit.ralph.md
.claude/skills/speckit-orchestrator/: README.md  SKILL.md  orchestrator.py
.specify/templates/: checklist-template.md  plan-template.md  tasks-template.md
_docs/test/: OLD_FILE.md
memory/: constitution.md
scripts/bash/: ralph-wiggum.sh
scripts/powershell/: ralph-wiggum.ps1  validate-quality-gates.ps1
templates/: plan-template.md  spec-template.md  tasks-template.md
templates/commands/: checklist.md
tests/unit/: test_orchestrator.py  test_orchestrator_simple.py
